--- a/FastFood/app/src/main/res/layout/activity_main.xml
+++ b/FastFood/app/src/main/res/layout/activity_main.xml
@@ -24,8 +24,8 @@
             android:layout_height="183dp"
             android:layout_marginBottom="100dp"
             android:background="@drawable/image_circulo"
-            android:padding="40dp"
-            android:src="@mipmap/logo_4"></ImageView>
+            android:padding="26dp"
+            android:src="@mipmap/mgfood1"></ImageView>
 
 
         <Button
@@ -47,7 +47,7 @@
             android:layout_marginLeft="20dp"
             android:layout_marginRight="20dp"
             android:layout_marginBottom="30dp"
-            android:background="@drawable/btn_redondeado_azul"
+            android:background="@drawable/btn_redondeado_azul_light"
             android:elevation="5dp"
             android:onClick="Menuopciones"
             android:textColor="@color/colorWhite"
