--- a/FastFood/app/src/main/res/layout/activity_start_splash.xml
+++ b/FastFood/app/src/main/res/layout/activity_start_splash.xml
@@ -7,27 +7,10 @@
     tools:context=".StartSplash">
 
     <ImageView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:scaleType="centerCrop"
-        android:src="@mipmap/fondo_azul2"></ImageView>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="#d8000000"
-        android:gravity="center"
-        android:orientation="vertical"
-        tools:layout_editor_absoluteX="50dp"
-        tools:layout_editor_absoluteY="16dp">
-        <ImageView
-            android:layout_width="150dp"
-            android:layout_height="150dp"
-            android:layout_marginBottom="60dp"
-            android:background="@drawable/image_circulo"
-            android:padding="26dp"
-            android:src="@mipmap/logo_4"></ImageView>
-
-    </LinearLayout>
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginBottom="50dp"
+            android:padding="0dp"
+            android:src="@mipmap/logo3"></ImageView>
 
 </RelativeLayout>
