--- a/FastFood/app/src/main/res/layout/activity_start_splash.xml
+++ b/FastFood/app/src/main/res/layout/activity_start_splash.xml
@@ -6,11 +6,18 @@
     android:layout_height="match_parent"
     tools:context=".StartSplash">
 
-    <ImageView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginBottom="50dp"
-            android:padding="0dp"
-            android:src="@mipmap/logo3"></ImageView>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@color/colorBlack"
+        android:gravity="center">
+
+        <ImageView
+            android:layout_width="250dp"
+            android:layout_height="250dp"
+            android:src="@mipmap/mgfood2"></ImageView>
+
+    </LinearLayout>
+
 
 </RelativeLayout>
