--- a/FastFood/app/src/main/res/values/colors.xml
+++ b/FastFood/app/src/main/res/values/colors.xml
@@ -7,4 +7,5 @@
     <color name="colorLightBlue">#01579B</color>
     <color name="colorPurple">#9C27B0</color>
     <color name="colorBlack">#000</color>
+    <color name="colorOrange">#FF9800</color>
 </resources>
