--- a/FastFood/app/src/main/res/drawable/spinner_item.xml
+++ b/FastFood/app/src/main/res/drawable/spinner_item.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle">
 
     <stroke android:width="4dp"
-        android:color="@color/colorLightBlue"/>
+        android:color="@color/colorBlack"/>
 
     <padding android:left="1dp"
         android:top="1dp"
