--- a/FastFood/app/src/main/res/layout/activity_login.xml
+++ b/FastFood/app/src/main/res/layout/activity_login.xml
@@ -11,7 +11,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:scaleType="centerCrop"
-        android:src="@mipmap/fondo_azul2"></ImageView>
+        android:src="@mipmap/fondo_azul4"></ImageView>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -27,6 +27,7 @@
             android:layout_width="150dp"
             android:layout_height="150dp"
             android:layout_marginBottom="60dp"
+            android:background="@drawable/image_circulo"
             android:padding="0dp"
             android:src="@mipmap/mgfood2"></ImageView>
 
@@ -43,6 +44,7 @@
             android:paddingTop="10dp"
             android:paddingRight="10dp"
             android:paddingBottom="10dp"
+            android:textColor="@color/colorWhite"
             android:textColorHint="#FFFFFF"></EditText>
 
         <EditText
@@ -58,6 +60,7 @@
             android:paddingTop="10dp"
             android:paddingRight="10dp"
             android:paddingBottom="10dp"
+            android:textColor="@color/colorWhite"
             android:textColorHint="#FFFFFF"></EditText>
 
         <Button
@@ -81,10 +84,9 @@
             android:layout_marginRight="20dp"
             android:layout_marginBottom="30dp"
             android:background="@drawable/btn_redondeado_white"
-            android:elevation="5dp"
             android:onClick="StartShopping"
             android:text="Iniciar Sesión"
-            android:textSize="16dp"></Button>
+            android:textSize="18dp"></Button>
 
         <TextView
             android:layout_width="wrap_content"
