--- a/FastFood/app/src/main/res/layout/activity_main.xml
+++ b/FastFood/app/src/main/res/layout/activity_main.xml
@@ -11,13 +11,12 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        android:background="@color/colorBlack"
         android:gravity="center">
 
         <ImageView
             android:layout_width="183dp"
             android:layout_height="183dp"
-            android:layout_marginBottom="100dp"
+            android:layout_marginBottom="50dp"
             android:background="@drawable/image_circulo"
             android:padding="26dp"
             android:src="@mipmap/mgfood1"></ImageView>
@@ -27,12 +26,12 @@
             android:id="@+id/button_login"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="20dp"
-            android:layout_marginRight="20dp"
+            android:layout_marginLeft="30dp"
+            android:layout_marginRight="30dp"
             android:layout_marginBottom="30dp"
-            android:background="@drawable/btn_redondeado_white"
+            android:background="@drawable/btn_redondeado_negro"
             android:onClick="LoginActivity"
-            android:textColor="@color/colorBlack"
+            android:textColor="@color/colorWhite"
             android:text="Iniciar Sesión"
             android:textSize="16dp"></Button>
 
@@ -40,13 +39,13 @@
             android:id="@+id/button_login_facebook"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="20dp"
-            android:layout_marginRight="20dp"
+            android:layout_marginLeft="30dp"
+            android:layout_marginRight="30dp"
             android:layout_marginBottom="30dp"
-            android:background="@drawable/btn_redondeado_white"
+            android:background="@drawable/btn_redondeado_negro"
             android:elevation="5dp"
             android:onClick="Menuopciones"
-            android:textColor="@color/colorBlack"
+            android:textColor="@color/colorWhite"
             android:text="Iniciar Sesión Facebook"
             android:textSize="16dp"></Button>
 
